# otus-python-basic

./: .gitignore  README.md
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  Makefile  README.md  pyproject.toml
homework_03/api/: main.py  test_main.py
homework_03/api/recipes/: __init__.py  handlers.py  models.py
homework_04/: jsonplaceholder_requests.py  main.py  requirements.txt
homework_04/models/: __init__.py  base.py  post.py  user.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
homework_06/assets/: data.sql
homework_06/assets/nginx/: default.conf
homework_06/blog/: __init__.py  app.py  forms.py  routes.py
homework_06/blog/database/: __init__.py  db.py  models.py  queries.py
homework_06/blog/templates/: base.html  error.html  index.html  posts.html  users.html
homework_06/migrations/: alembic.ini
homework_06/migrations/versions/: 1655019953_added_created_at_column.py  39764044b702_initial_migration.py
homework_06/scripts/: run.sh
testing/test_homework_01/: __init__.py
testing/test_homework_04/: __init__.py
